--- a/Superresolución.ipynb
+++ b/Superresolución.ipynb
@@ -103,7 +103,7 @@
    "cell_type": "code",
    "source": [
     "def downsample_images(images, target_size=7):\n",
-    "    return F.interpolate(images, size=target_size, mode='area')"
+    "    return F.interpolate(images, size=target_size, mode='bilinear')"
    ],
    "id": "ffc10775b2aed43d",
    "outputs": [],
